# stefhq

./: .dockerignore  .gitignore  DEV_GUIDE.md  docker-compose.yml
core/: .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml  seed.py
core/agents/: __init__.py  base.py  business.py  hive_mind.py  inbox.py  plant_atlas.py  round_table.py  router.py
core/api/: activity.py  auth.py  chat.py  conversations.py  google_auth.py  headspace.py  memory.py  notes.py  pip.py  tasks.py  whatsapp.py
core/integrations/: bijoux_home.py  google.py
core/models/: db.py
core/services/: activity.py  agent_naming.py  briefing_settings.py  context.py  datetime_context.py  email_noise.py  embeddings.py  memory.py  memory_extractor.py  pending_events.py  pip_relay.py  project_notes.py  reminders.py  streaming.py  title.py  whatsapp.py
core/tools/: github_tools.py  project_registry.py
core/workers/: arq_pool.py  briefing_worker.py  memory_worker.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.ts  auth.svelte.ts  historyRefresh.svelte.ts  reviewRefresh.svelte.ts  taskRefresh.svelte.ts  types.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/(app)/: +layout.svelte
frontend/src/routes/(app)/[workspace]/: +page.svelte
frontend/src/routes/(app)/activity/: +page.svelte
frontend/src/routes/(app)/google-connect/: +page.svelte
frontend/src/routes/(app)/inbox/: +page.svelte
frontend/src/routes/(app)/notes/: +page.svelte
frontend/src/routes/login/: +page.svelte
(+1 files in other folders)
