[project]
name = "stef-hq-core"
version = "0.1.0"
description = "Stef HQ — private AI core"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false
